fix location styling on mobile

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -52,7 +52,7 @@
       }
     }
     &.location-collection-item{
-      padding-left: 0px !important;
+      padding-left: 5px !important;
     }
     &:last-child{
       border-bottom: 1px solid #e0e0e0;
